# my-cpp-practice

./: README.md
my_opencv_project/: CMakeLists.txt
my_opencv_project/include/: image_display.h
my_opencv_project/src/: image_display.cpp  main.cpp
